--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.es-MX.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.es-MX.resx
@@ -118,51 +118,51 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>[es-MX]No records found.</value>
+    <value>{ES-MX}No records found.</value>
   </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
-    <value>[es-MX]Credit Note Documents</value>
+    <value>{ES-MX}Credit Note Documents</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>[es-MX]MetraNet - View Credit Notes Issued</value>
+    <value>{ES-MX}MetraNet - View Credit Notes Issued</value>
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
-    <value>[es-MX]Account</value>
+    <value>{ES-MX}Account</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
-    <value>[es-MX]Amount</value>
+    <value>{ES-MX}Amount</value>
   </data>
   <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
-    <value>[es-MX]Amount</value>
+    <value>{ES-MX}Amount</value>
   </data>
   <data name="TEXT_CREATED_BY" xml:space="preserve">
-    <value>[es-MX]Created By</value>
+    <value>{ES-MX}Created By</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_IDENTIFIER" xml:space="preserve">
-    <value>[es-MX]Credit Note Identifier</value>
+    <value>{ES-MX}Credit Note Identifier</value>
   </data>
   <data name="TEXT_DATE" xml:space="preserve">
-    <value>[es-MX]Date</value>
+    <value>{ES-MX}Date</value>
   </data>
   <data name="TEXT_ID" xml:space="preserve">
-    <value>[es-MX]Id</value>
+    <value>{ES-MX}Id</value>
   </data>
   <data name="TEXT_TAX" xml:space="preserve">
-    <value>[es-MX]Tax</value>
+    <value>{ES-MX}Tax</value>
   </data>
   <data name="TEXT_DISPLAY_TAX" xml:space="preserve">
-    <value>[es-MX]Tax</value>
+    <value>{ES-MX}Tax</value>
   </data>
   <data name="TEXT_TOTAL" xml:space="preserve">
-    <value>[es-MX]Total</value>
+    <value>{ES-MX}Total</value>
   </data>
   <data name="TEXT_DISPLAY_TOTAL" xml:space="preserve">
-    <value>[es-MX]Total</value>
+    <value>{ES-MX}Total</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
-    <value>[es-MX]Status</value>
+    <value>{ES-MX}Status</value>
   </data>
   <data name="TEXT_STATUS_INFORMATION" xml:space="preserve">
-    <value>[es-MX]Status Information</value>
+    <value>{ES-MX}Status Information</value>
   </data>
 </root>
