--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.es-MX.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.es-MX.resx
@@ -130,10 +130,10 @@
     <value>Fecha del ajuste</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.Label" xml:space="preserve">
-    <value>[es-MX]Internal Descripción</value>
+    <value>{ES-MX}Internal Descripción</value>
   </data>
   <data name="adjDescriptionTextBoxResource2.Label" xml:space="preserve">
-    <value>[es-MX]Invoice Description</value>
+    <value>{ES-MX}Invoice Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
@@ -154,16 +154,16 @@
     <value>True</value>
   </data>
   <data name="cbIssueCreditNoteResource1.BoxLabel" xml:space="preserve">
-    <value>[es-MX]Issue Credit Note For This Adjustment</value>
+    <value>{ES-MX}Issue Credit Note For This Adjustment</value>
   </data>
   <data name="CommentTextBoxResource1.Label" xml:space="preserve">
-    <value>[es-MX]Comment</value>
+    <value>{ES-MX}Comment</value>
   </data>
   <data name="ddBillingPeriod1.Label" xml:space="preserve">
     <value>Período de facturación</value>
   </data>
   <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
-    <value>[es-MX]Credit Note Template To Use</value>
+    <value>{ES-MX}Credit Note Template To Use</value>
   </data>
   <data name="ddReasonCodeResource1.AllowBlank" xml:space="preserve">
     <value>False</value>
@@ -181,7 +181,7 @@
     <value>Emitir ajuste misceláneo</value>
   </data>
   <data name="MTPanel2Resource1.Text" xml:space="preserve">
-    <value>[es-MX]Issue Credit Note For This Adjustment</value>
+    <value>{ES-MX}Issue Credit Note For This Adjustment</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
@@ -271,9 +271,9 @@
     <value>[es-MX] Total Adjustment Being Issued</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_CREATED" xml:space="preserve">
-    <value>[es-MX]A credit note for this Miscellaneous Adjustment was created.</value>
+    <value>{ES-MX}A credit note for this Miscellaneous Adjustment was created.</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_PENDING" xml:space="preserve">
-    <value>[es-MX]A credit note for this Miscellaneous Adjustment will be created when this Miscellaneous Adjusment is approved.</value>
+    <value>{ES-MX}A credit note for this Miscellaneous Adjustment will be created when this Miscellaneous Adjusment is approved.</value>
   </data>
 </root>
