--- a/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.de.resx
+++ b/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.de.resx
@@ -157,7 +157,7 @@
     <value>Konflikt Sitzungs-ID</value>
   </data>
   <data name="TEXT_COUNTY_AMOUNT" xml:space="preserve">
-    <value>[DE] Tax County</value>
+    <value>[de] County Tax</value>
   </data>
   <data name="TEXT_CURRENCY" xml:space="preserve">
     <value>Währung</value>
@@ -172,7 +172,7 @@
     <value>Möchten Sie wirklich fortfahren?  Durch diesen Schritt werden alle Anpassungen verweigert, die mit Ihren Filterkriterien übereinstimmen.  Wenn keine Filter vorhanden sind, werden alle Anpassungen verweigert.</value>
   </data>
   <data name="TEXT_DESCRIPTION" xml:space="preserve">
-    <value>[DE]Internal Beschreibung</value>
+    <value>[de] Internal Beschreibung</value>
   </data>
   <data name="TEXT_EMAIL_ADDRESS" xml:space="preserve">
     <value>E-Mail-Adresse</value>
@@ -184,7 +184,7 @@
     <value>Bei der Bearbeitung der sonstigen Anpassung ist ein Fehler aufgetreten.</value>
   </data>
   <data name="TEXT_FEDERAL_AMOUNT" xml:space="preserve">
-    <value>[DE]Tax Federal</value>
+    <value>[de] Federal Tax</value>
   </data>
   <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
     <value>Guide Interval Id</value>
@@ -193,7 +193,7 @@
     <value>Intervall-ID</value>
   </data>
   <data name="TEXT_LOCAL_AMOUNT" xml:space="preserve">
-    <value>[DE]Tax Local</value>
+    <value>[de] Local Tax</value>
   </data>
   <data name="TEXT_NO_IDS" xml:space="preserve">
     <value>Bitte wählen Sie Anpassungen zur Bearbeitung aus.</value>
@@ -202,7 +202,7 @@
     <value>Andere</value>
   </data>
   <data name="TEXT_OTHER_AMOUNT" xml:space="preserve">
-    <value>[DE]Tax Other</value>
+    <value>[de] Other Tax</value>
   </data>
   <data name="TEXT_PENDING_STATUS" xml:space="preserve">
     <value>Ausstehend</value>
@@ -217,10 +217,10 @@
     <value>Sitzungstyp</value>
   </data>
   <data name="TEXT_STATE_AMOUNT" xml:space="preserve">
-    <value>[DE]Tax State</value>
+    <value>[de] State Tax</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
-    <value>[DE]Status</value>
+    <value>Status</value>
   </data>
   <data name="TEXT_SUBSCRIBER_ACCOUNT_ID" xml:space="preserve">
     <value>Teilnehmerkonto-ID</value>
