--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.ja.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.ja.resx
@@ -118,51 +118,51 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>[JA]No records found.</value>
+    <value>{JA}No records found.</value>
   </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
-    <value>[JA]Credit Note Documents</value>
+    <value>{JA}Credit Note Documents</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>[JA]MetraNet - View Credit Notes Issued</value>
+    <value>{JA}MetraNet - View Credit Notes Issued</value>
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
-    <value>[JA]Account</value>
+    <value>{JA}Account</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
-    <value>[JA]Amount</value>
+    <value>{JA}Amount</value>
   </data>
   <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
-    <value>[JA]Amount</value>
+    <value>{JA}Amount</value>
   </data>
   <data name="TEXT_CREATED_BY" xml:space="preserve">
-    <value>[JA]Created By</value>
+    <value>{JA}Created By</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_IDENTIFIER" xml:space="preserve">
-    <value>[JA]Credit Note Identifier</value>
+    <value>{JA}Credit Note Identifier</value>
   </data>
   <data name="TEXT_DATE" xml:space="preserve">
-    <value>[JA]Date</value>
+    <value>{JA}Date</value>
   </data>
   <data name="TEXT_ID" xml:space="preserve">
-    <value>[JA]Id</value>
+    <value>{JA}Id</value>
   </data>
   <data name="TEXT_TAX" xml:space="preserve">
-    <value>[JA]Tax</value>
+    <value>{JA}Tax</value>
   </data>
   <data name="TEXT_DISPLAY_TAX" xml:space="preserve">
-    <value>[JA]Tax</value>
+    <value>{JA}Tax</value>
   </data>
   <data name="TEXT_TOTAL" xml:space="preserve">
-    <value>[JA]Total</value>
+    <value>{JA}Total</value>
   </data>
   <data name="TEXT_DISPLAY_TOTAL" xml:space="preserve">
-    <value>[JA]Total</value>
+    <value>{JA}Total</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
-    <value>[JA]Status</value>
+    <value>{JA}Status</value>
   </data>
   <data name="TEXT_STATUS_INFORMATION" xml:space="preserve">
-    <value>[JA]Status Information</value>
+    <value>{JA}Status Information</value>
   </data>
 </root>
