--- a/App_GlobalResources/MainMenu.de.resx
+++ b/App_GlobalResources/MainMenu.de.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -633,4 +633,13 @@
   <data name="TEXT_ACCOUNT" xml:space="preserve">
     <value>[DE]Account</value>
   </data>    
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>{DE}Create Quote</value>
+  </data>
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>{DE}View All Quotes</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>{DE}Shared Properties</value>
+  </data>  
 </root>
