--- a/App_GlobalResources/MainMenu.it.resx
+++ b/App_GlobalResources/MainMenu.it.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -632,5 +632,14 @@
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
     <value>[IT]Account</value>
+  </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>{IT}Create Quote</value>
   </data>  
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>{IT}View All Quotes</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>{IT}Shared Properties</value>
+  </data>   
 </root>
