--- a/App_GlobalResources/MainMenu.ja.resx
+++ b/App_GlobalResources/MainMenu.ja.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -626,5 +626,14 @@
   </data>
   <data name="TEXT_ACCOUNT" xml:space="preserve">
     <value>[JA]Account</value>
+  </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>{JA}Create Quote</value>
   </data>    
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>{JA}View All Quotes</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>{JA}Shared Properties</value>
+  </data>   
 </root>
