--- a/App_GlobalResources/Resource.pt-br.resx
+++ b/App_GlobalResources/Resource.pt-br.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="LocalizedJavaScript" xml:space="preserve">
-    <value>/Res/JavaScript/Localized.js?v=6.5</value>
+    <value>/Res/JavaScript/Localized.pt-br.js?v=6.5</value>
   </data>
   <data name="LocalizedJavaScriptTemplates" xml:space="preserve">
     <value>/Res/JavaScript/Templates.js?v=6.5</value>
