--- a/Sites/MetraView/Payments/App_LocalResources/ACHRemove.aspx.de.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/ACHRemove.aspx.de.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ACHRemove.Text" xml:space="preserve">
+  <data name="RemoveACH.Text" xml:space="preserve">
     <value>ACH entfernen</value>
   </data>
   <data name="btnNoResource1.Text" xml:space="preserve">
