--- a/App_LocalResources/Login.aspx.ja.resx
+++ b/App_LocalResources/Login.aspx.ja.resx
@@ -177,4 +177,22 @@
     <data name="tbUserNameResource1.LabelWidth" xml:space="preserve">
         <value>140</value>
     </data>
+    <data name="NEW_PASSWORD_TEXT" xml:space="preserve">
+        <value>{ja} New Password</value>
+    </data>        
+    <data name="CONFIRM_PASSWORD_TEXT" xml:space="preserve">
+        <value>{ja} Confirm New Password</value>
+    </data>         
+    <data name="ENTER_PASSWORD" xml:space="preserve">
+        <value>{ja} Enter Password</value>
+    </data>    
+    <data name="ENTER_NEW_PASSWORD" xml:space="preserve">
+        <value>{ja} Enter New Password</value>
+    </data>        
+    <data name="ENTER_CONFIRM_PASSWORD" xml:space="preserve">
+        <value>{ja} Enter Confirm Password</value>
+    </data>            
+    <data name="PASSWORDS_DONT_MATCH" xml:space="preserve">
+        <value>{ja} Passwords donot match</value>
+    </data>    
 </root>
