--- a/App_LocalResources/Login.aspx.pt-br.resx
+++ b/App_LocalResources/Login.aspx.pt-br.resx
@@ -177,4 +177,22 @@
     <data name="tbUserNameResource1.LabelWidth" xml:space="preserve">
         <value>120</value>
     </data>
+    <data name="NEW_PASSWORD_TEXT" xml:space="preserve">
+        <value>{pt-br} New Password</value>
+    </data>        
+    <data name="CONFIRM_PASSWORD_TEXT" xml:space="preserve">
+        <value>{pt-br} Confirm New Password</value>
+    </data>     
+    <data name="ENTER_PASSWORD" xml:space="preserve">
+        <value>{pt-br} Enter Password</value>
+    </data>    
+    <data name="ENTER_NEW_PASSWORD" xml:space="preserve">
+        <value>{pt-br} Enter New Password</value>
+    </data>        
+    <data name="ENTER_CONFIRM_PASSWORD" xml:space="preserve">
+        <value>{pt-br} Enter Confirm Password</value>
+    </data>            
+    <data name="PASSWORDS_DONT_MATCH" xml:space="preserve">
+        <value>{pt-br} Passwords donot match</value>
+    </data> 
 </root>
