CORE-8051 [FEAT-4141: MetraView] IE and FF compatibility: Incorrect UI of NowCast widget in Home page of MetraView.
CORE-8058
[FEAT-4141] Some UI issues of NowCast in MetraNet

--- a/Sites/MetraView/App_GlobalResources/Dashboard.de.resx
+++ b/Sites/MetraView/App_GlobalResources/Dashboard.de.resx
@@ -136,4 +136,7 @@
     <data name="TEXT_USAGE_BY_PRODUCT" xml:space="preserve">
         <value>Derzeitige Nutzung nach Produkt</value>
     </data>
+    <data name="TEXT_DECISION_INSTANCES" xml:space="preserve">
+        <value>[DE] NowCast</value>
+    </data>    
 </root>
