CORE-8051 [FEAT-4141: MetraView] IE and FF compatibility: Incorrect UI of NowCast widget in Home page of MetraView.
CORE-8058
[FEAT-4141] Some UI issues of NowCast in MetraNet

--- a/App_GlobalResources/JSConsts.es-MX.resx
+++ b/App_GlobalResources/JSConsts.es-MX.resx
@@ -1254,4 +1254,10 @@
   <data name="TEXT_AMPWIZARD_INVALID_UQG_NAME" xml:space="preserve">
     <value>[ES-MX] The value in this field is invalid. Valid Usage Qualification names can only consist of alphanumeric characters (Aa-Zz, 0-9) and the underscore '_' character.</value>
   </data>
+  <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
+    <value>[es-MX] Refresh</value>
+  </data>
+  <data name="TEXT_NOWCAST_RIGHT_CLICK_FOR_OPTIONS" xml:space="preserve">
+    <value>[es-MX] right click for options</value>
+  </data>  
 </root>
