--- a/Account/App_LocalResources/AccountLandingPage.aspx.de.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.de.resx
@@ -186,4 +186,7 @@
   <data name="NO_DECISIONS_TEXT" xml:space="preserve">
     <value>[DE] No Transactions Found for the Current Interval</value>
   </data>   
+  <data name="lblNowCast.Text" xml:space="preserve">
+    <value>[DE] NowCast</value>
+  </data>  
 </root>
