--- a/Account/App_LocalResources/AccountLandingPage.aspx.pt-br.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.pt-br.resx
@@ -186,4 +186,7 @@
   <data name="NO_DECISIONS_TEXT" xml:space="preserve">
     <value>[pt-BR] No Transactions Found for the Current Interval</value>
   </data>   
+  <data name="lblNowCast.Text" xml:space="preserve">
+    <value>[pt-BR] NowCast</value>
+  </data>
 </root>
