--- a/App_GlobalResources/DecisionService.aspx.it.resx
+++ b/App_GlobalResources/DecisionService.aspx.it.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,76 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AMOUNT_COL_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX] Amount</value>
+  <data name="TEXT_MARKER_AMOUNT" xml:space="preserve">
+    <value>[IT] Amount:</value>
   </data>
-  <data name="DATE_COL_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX] Date</value>
+  <data name="TEXT_PROJECTED_AMOUNT" xml:space="preserve">
+    <value>[IT] Projected Amount:</value>
   </data>
-  <data name="IDENTIFIER_COL_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX] Identifier</value>
+  <data name="TEXT_UNNAMED_DECISION" xml:space="preserve">
+    <value>[IT] Unnamed Decision</value>
   </data>
-  <data name="lblAccount360Title.Text" xml:space="preserve">
-    <value>[es-MX] Account 360</value>
-  </data>
-  <data name="TYPE_COL_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX] Type</value>
-  </data>
-  <data name="billingActivityPanel.Text" xml:space="preserve">
-    <value>[es-MX] Billing Activity</value>
-  </data>  
-  <data name="billingSummaryPanel.Text" xml:space="preserve">
-    <value>[es-MX] Invoices and Payments</value>
-  </data>     
-  <data name="NO_INVOICES_TEXT" xml:space="preserve">
-    <value>[es-MX] This account does not currently have any invoices or payments.</value>
-  </data>
-  <data name="NO_SUBSCRIPTIONS_TEXT" xml:space="preserve">
-    <value>[es-MX] This account currently does not have any subscriptions.</value>
-  </data>
-  <data name="SUBSCRIPTION_GRID_TITLE_TEXT" xml:space="preserve">
-    <value>[es-MX] Subscriptions</value>
-  </data>   
-  <data name="SUBSCRIPTION_END_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX] End</value>
-  </data>
-  <data name="SUBSCRIPTION_OFFERING_NAME_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX] Subscription</value>
-  </data>
-  <data name="SUBSCRIPTION_START_HEADER_TEXT" xml:space="preserve">
-    <value>[es-MX] Start</value>
-  </data>
-  <data name="SUBSCRIPTION_TYPE_HEADER_TEXT" xml:space="preserve">
-    <value />
-  </data>  
-  <data name="SUBSCRIPTION_ADD_BUTTON_TEXT" xml:space="preserve">
-    <value>[es-MX] Add Subscription</value>
-  </data>
-  <data name="SUBSCRIPTION_ADD_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
-    <value>[es-MX] Create a new subscription to a Product Offering</value>
-  </data>    
-  <data name="SUBSCRIPTION_JOIN_BUTTON_TEXT" xml:space="preserve">
-    <value>[es-MX] Join Group Subscription</value>
-  </data>  
-  <data name="SUBSCRIPTION_JOIN_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
-    <value>[es-MX] Add this account as a member of an existing Group Subscription</value>
-  </data>      
-  <data name="SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
-    <value>[es-MX] Subscription</value>
-  </data>      
-  <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
-    <value>[es-MX] Group Subscription</value>
-  </data>           
-  <data name="INVOICE_ITEM_TEXT" xml:space="preserve">
-    <value>[es-MX] Invoice</value>
-  </data>      
-  <data name="PAYMENT_ITEM_TEXT" xml:space="preserve">
-    <value>[es-MX] Payment</value>
-  </data>            
-  <data name="NO_DECISIONS_TEXT" xml:space="preserve">
-    <value>[es-MX] No Transactions Found for the Current Interval</value>
-  </data>   
-  <data name="lblNowCast.Text" xml:space="preserve">
-    <value>[es-MX] NowCast</value>
-  </data>  
 </root>
