CORE-8030 : Fixing bad merge. github didn't identify Andy's change and Deepali's change as the same work item.

--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -628,7 +628,7 @@
     <value>Mettre à jour la définition de rapport existante</value>
   </data>
   <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
-    <value>{FR}Usage Calculation Decision Details</value>
+    <value>[FR]Usage Calculation Decision Details</value>
   </data>
   <data name="TEXT_USM" xml:space="preserve">
     <value>Maintenance du serveur d’utilisation</value>
@@ -647,9 +647,6 @@
   </data>
   <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
     <value>Afficher la facture en ligne</value>
-  </data>
-  <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
-    <value>[FR]Usage Audit</value>
   </data>
   <data name="TEXT_ADD_TENANT" xml:space="preserve">
     <value>[FR]Add Partition</value>
